--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.1.8.RELEASE'
     compile group: 'org.springframework', name: 'spring-tx', version: '5.1.8.RELEASE'
     compile group: 'org.springframework', name: 'spring-orm', version: '5.1.8.RELEASE'
